--- a/src/styles/global/base.styl
+++ b/src/styles/global/base.styl
@@ -1,6 +1,9 @@
-body
+:root
   font-family Arial, Helvetica, sans-serif
   color #333
   background-color #fff
+
+html
+body
   margin 0
   padding 0
