--- a/src/styles/components/painter.styl
+++ b/src/styles/components/painter.styl
@@ -8,6 +8,7 @@
     display: block
     position: relative
     width: 100%
+    touch-action: none  //Prevents IE/Edge from intrepreting touch input as scroll/pan commands.
   
   .subject
     background: $tertiary
@@ -16,4 +17,5 @@
     position: absolute
     top: 0
     left: 0
-    background: rgba(255, 128, 255, 0.5)
+    background: rgba(255, 255, 255, 0.5)
+    opacity: 0.8
