Functional Painter Classifier

--- a/src/styles/components/painter.styl
+++ b/src/styles/components/painter.styl
@@ -1,5 +1,5 @@
 .painter
-  margin: 2em
+  margin: 1em
   border: 1px solid $tertiary
   background: $secondary
   position: relative
@@ -19,3 +19,20 @@
     left: 0
     background: rgba(255, 255, 255, 0.5)
     opacity: 0.8
+
+.painter-output
+  margin: 1em
+  
+  textarea
+    display: inline-block
+    height: 5em
+    width: 10em
+  
+  a
+    display: inline-block
+    background: $primary
+    color: $secondary
+    text-decoration: none
+    margin: 1em
+    padding: 0.5em
+    border-radius: 1em
