--- a/src/styles/components/painter.styl
+++ b/src/styles/components/painter.styl
@@ -7,7 +7,7 @@
   > canvas
     display: block
     position: relative
-    max-width: 100%
+    width: 100%
     touch-action: none  //Prevents IE/Edge from intrepreting touch input as scroll/pan commands.
   
   .subject
