Add text angle to aggregated text, also width/height props to SVGViewer.

--- a/src/styles/components/svgViewer.styl
+++ b/src/styles/components/svgViewer.styl
@@ -11,6 +11,21 @@
   background: $tertiary
   display: block
   margin: 0 auto
+  
+  .aggregated-text    
+    .circle
+      fill: rgba(255, 255, 255, 0.4)
+    .path
+      fill: rgba(255, 255, 255, 0.2)
+    .text
+      fill: rgba(0, 0, 0, 0)
+  
+  .aggregated-text:hover
+    .circle 
+    .path
+      fill: rgba(255, 255, 255, 1)
+    .text
+      fill: rgba(0, 0, 0, 1)
 
 .svgImage-loading
   animation-name: loading-pulse
