Mouse scroll added

--- a/src/styles/components/svgViewer.styl
+++ b/src/styles/components/svgViewer.styl
@@ -11,6 +11,10 @@
   background: $tertiary
   display: block
   margin: 0 auto
+  border: 1px solid white
+  
+  &:focus
+    border: 1px solid red
   
   .aggregated-text    
     .circle
