--- a/src/styles/components/svgViewer.styl
+++ b/src/styles/components/svgViewer.styl
@@ -11,10 +11,7 @@
   background: $tertiary
   display: block
   margin: 0 auto
-  border: 1px solid white
-  
-  &:focus
-    border: 1px solid red
+  cursor: all-scroll
     
   &.show-aggregations-none
     .aggregated-text    
