--- a/src/styles/components/transcription-viewer.styl
+++ b/src/styles/components/transcription-viewer.styl
@@ -4,18 +4,24 @@
   display: flex
   flex-direction: column
   align-items: stretch
+  position: relative
   
-  .metadata-panel
   .input-panel
-    display: none
-    
-  .input-panel
+    font-size: 0.8em
+    position: absolute
+    right: 0
+    top: 0
+    background: white
+    padding: 0.5em
     margin: 0 auto
-    padding: 1em
-    max-width: 40em
+    width: 20em
+    max-width: 100%
     border: 1px solid $tertiary
     text-align: center
     border-radius: 1em
+    
+    p
+      margin: 0 0.2em
     
     .status-subpanel
       border-radius: 1em
@@ -25,12 +31,19 @@
       color: $secondary
       
   .metadata-panel
+    font-size: 0.8em
+    position: absolute
+    left: 0
+    bottom: 0
+    background: white
     margin: 0 auto
     padding: 1em
+    width: 20em
+    max-width: 100%
     border-collapse: collapse
     
     td
-      padding: 0.5em
+      padding: 0.2em
       vertical-align: top
     
     td:first-child
