Duplicated and versioned CSS

--- a/src/styles/components/svg-viewer-v1.styl
+++ b/src/styles/components/svg-viewer-v1.styl
@@ -7,7 +7,7 @@
   }
 }
 
-.svgViewer
+.svg-viewer-v1
   background: $tertiary
   display: block
   margin: 0 auto
@@ -44,13 +44,13 @@
       .text
         fill: rgba(0, 0, 0, 1)
     
-.svgImage-loading
+.svg-image-v1-loading
   animation-name: loading-pulse
   animation-duration: 1s
   animation-direction: alternate
   animation-iteration-count: infinite
 
-.svgImage-error
+.svg-image-v1-error
   fill: $primary
   stroke: $secondary
   stroke-width: 4
