--- a/src/styles/components/svg-viewer-v2.styl
+++ b/src/styles/components/svg-viewer-v2.styl
@@ -14,7 +14,8 @@
   //border: 1px solid white
   flex: 1 1 auto
   width: 100%
-    
+  cursor: all-scroll
+  
   &.show-aggregations-none
     .aggregated-text    
       display: none
