Dual page layout

--- a/src/styles/components/transcription-viewer-v3.styl
+++ b/src/styles/components/transcription-viewer-v3.styl
@@ -2,10 +2,15 @@
   background: $secondary
   flex: 1 1 auto
   display: flex
-  flex-direction: column
+  flex-direction: row
   align-items: stretch
   position: relative
   border: 1px solid $secondary
+  
+  .data-panel
+    border: 1px solid #fff
+    flex: 1 1 auto
+    display: flex
   
   .input-panel
     font-size: 0.8em
