New style for 2 page layout

--- a/src/styles/components/transcription-viewer-v3.styl
+++ b/src/styles/components/transcription-viewer-v3.styl
@@ -5,10 +5,10 @@
   flex-direction: row
   align-items: stretch
   position: relative
-  border: 1px solid $secondary
   
   .data-panel
-    border: 1px solid #fff
+    border: 1px solid $primary
+    margin: 1px
     flex: 1 1 auto
     display: flex
   
@@ -16,6 +16,7 @@
     flex: 1 1 10em
     max-width: 20%
     font-size: 0.8em
+    margin: 1px
     
     > div
       margin-top: 1em
