Now we have a fourth panel

--- a/src/styles/components/svg-viewer-v3.styl
+++ b/src/styles/components/svg-viewer-v3.styl
@@ -35,8 +35,10 @@
   
   &.show-aggregations-full
     .aggregated-text    
-      .circle
-        fill: rgba(153, 51, 153, 1)
+      .circle.start
+        fill: rgba(153, 51, 153, 0.5)
+      .circle.end
+        fill: rgba(34, 34, 136, 0.5)
       .path
         fill: rgba(255, 255, 255, 0.9)
       .text
