--- a/src/styles/components/app.styl
+++ b/src/styles/components/app.styl
@@ -51,8 +51,8 @@
 
 .button
   display: inline-block
-  margin: 0.2em 0.5em
-  padding: 0.2em 1em
+  margin: 0.25em
+  padding: 0.25em 1em
   border: 1px solid $primary
   color: $primary
   background: $secondary
