--- a/src/styles/global/root.styl
+++ b/src/styles/global/root.styl
@@ -1,7 +1,13 @@
-$primary = #939
+$primary = #369
+$primary-light = #39c
+$primary-dark = #036
+$highlight = #3cf
 $secondary = #fff
 $tertiary = #336
-$quaternary = #eec
+$neutral = #999
+$neutral-light = #ccc
+$neutral-dark = #666
+$anti = #c33
 
 :root
   font-family Arial, Helvetica, sans-serif
