--- a/src/styles/components/transcription-viewer-v3.styl
+++ b/src/styles/components/transcription-viewer-v3.styl
@@ -5,16 +5,11 @@
   flex-direction: row
   align-items: stretch
   position: relative
-  
-  .data-panel
-    border: 1px solid $primary
-    margin: 1px
-    flex: 1 1 auto
-    display: flex
+  background: $neutral-light
   
   .control-panel
-    flex: 1 1 10em
-    max-width: 20%
+    flex: 0 0 auto
+    width: 16em
     font-size: 0.8em
     margin: 1px
     
@@ -65,7 +60,62 @@
         background: $secondary
         color: $tertiary
   
-  .aggregation-panel
+  .data-panel
+    flex: 1 1 auto
+    display: flex
+    background: $neutral
+    margin: 0 3px
+    flex-direction: row
+    
+    &.vertical
+      flex-direction: column
+    
+    .data-subpanel
+      border: 1px solid $primary
+      margin: 3px
+      flex: 1 1 auto
+      display: flex
+  
+  .aggregations-panel
+    flex: 0 0 auto
+    width: 16em
+    font-size: 0.8em
+    margin: 1px
+    overflow: auto
+    
+    > div
+      margin-top: 1em
+      background: $secondary
+      color: $tertiary
+      border-radius: 1em
+      padding: 0.5em
+      
+      &.selected
+        color: $secondary
+        background: $primary-light
+      
+      .aggregated
+        display: flex
+        border-bottom: 1px solid $primary
+        justify-content: flex-start
+
+        input
+          flex: 0 0 auto
+        
+        span
+          flex: 1 1 auto
+        
+      ul.raw
+        font-size: 0.8em
+        margin: 0
+        padding: 0
+
+        li
+          border-left: 0.5em solid $primary
+          margin: 0.2em 0 0 0
+          padding: 0 0 0 0.2em
+  
+  /*.aggregation-panel
     border: 1px solid $tertiary
     font-size: 0.8em
     position: absolute
@@ -88,4 +138,4 @@
       color: $tertiary
       border-left: 1em solid $primary
       padding: 0.2em
-      margin-top: 0.2em
+      margin-top: 0.2em*/
