--- a/src/styles/components/svg-viewer-v3.styl
+++ b/src/styles/components/svg-viewer-v3.styl
@@ -8,7 +8,7 @@
 }
 
 .svg-viewer-v3
-  background: $secondary
+  background: $neutral-dark
   display: block
   margin: 0 auto
   cursor: all-scroll
@@ -34,13 +34,20 @@
         fill: rgba(0, 0, 0, 1)
   
   &.show-aggregations-full
-    .aggregated-text    
-      .circle
-        fill: rgba(153, 51, 153, 1)
+    .aggregated-text
+      .circle.start
+        fill: rgba($primary-light, 0.5)
+      .circle.end
+        fill: rgba($primary-dark, 0.5)
       .path
-        fill: rgba(255, 255, 255, 0.9)
+        fill: rgba($secondary, 0.9)
       .text
-        fill: rgba(0, 0, 0, 1)
+        fill: rgba($tertiary, 1)
+      &.selected
+        .path
+          fill: rgba($primary-light, 0.9)
+        .text
+          fill: rgba($secondary, 1)
     
 .svg-image-v3-loading
   animation-name: loading-pulse
