--- a/src/styles/components/app.styl
+++ b/src/styles/components/app.styl
@@ -61,6 +61,9 @@
   cursor: pointer
   box-shadow: 0 0.2em 0.2em #333
   
+  &.selected
+    color: $highlight
+  
   &:hover
     color: $highlight
     border: 0.2em solid $highlight
