Fixed scrolling issue

--- a/src/styles/components/app.styl
+++ b/src/styles/components/app.styl
@@ -75,6 +75,7 @@
   padding: 0.5em
   border: 0.2em solid $primary
   color: $tertiary
+  background: $secondary
   text-align: center
   border-radius: 1em
 
