--- a/src/styles/components/transcription-viewer-v3.styl
+++ b/src/styles/components/transcription-viewer-v3.styl
@@ -81,39 +81,45 @@
     width: 16em
     font-size: 0.8em
     margin: 1px
-    overflow: auto
+    display: flex
+    flex-direction: column
     
-    > div
-      margin-top: 1em
-      background: $secondary
-      color: $tertiary
-      border-radius: 1em
-      padding: 0.5em
+    
+    .list
+      flex: 1 1 auto
+      overflow: auto
       
-      &.selected
-        color: $secondary
-        background: $primary-light
-      
-      .aggregated
-        display: flex
-        border-bottom: 1px solid $primary
-        justify-content: flex-start
+      > div
+        margin-top: 1em
+        background: $secondary
+        color: $tertiary
+        border-radius: 1em
+        padding: 0.5em
 
-        input
-          flex: 0 0 auto
-        
-        span
-          flex: 1 1 auto
-        
-      ul.raw
-        font-size: 0.8em
-        margin: 0
-        padding: 0
+        &.selected
+          color: $secondary
+          background: $primary-light
 
-        li
-          border-left: 0.5em solid $primary
-          margin: 0.2em 0 0 0
-          padding: 0 0 0 0.2em
+        .aggregated
+          display: flex
+          border-bottom: 1px solid $primary
+          justify-content: flex-start
+
+          input
+            flex: 0 0 auto
+
+          span
+            flex: 1 1 auto
+
+        ul.raw
+          font-size: 0.8em
+          margin: 0
+          padding: 0
+
+          li
+            border-left: 0.5em solid $primary
+            margin: 0.2em 0 0 0
+            padding: 0 0 0 0.2em
   
   /*.aggregation-panel
     border: 1px solid $tertiary
