Supportive highlights added

--- a/src/styles/components/transcription-viewer-v3.styl
+++ b/src/styles/components/transcription-viewer-v3.styl
@@ -78,12 +78,11 @@
   
   .aggregations-panel
     flex: 0 0 auto
+    display: flex
+    flex-direction: column
     width: 16em
     font-size: 0.8em
     margin: 1px
-    display: flex
-    flex-direction: column
-    
     
     .list
       flex: 1 1 auto
@@ -115,6 +114,7 @@
           font-size: 0.8em
           margin: 0
           padding: 0
+          list-style: none
 
           li
             border-left: 0.5em solid $primary
