--- a/src/styles/components/svg-viewer-v3.styl
+++ b/src/styles/components/svg-viewer-v3.styl
@@ -14,40 +14,25 @@
   cursor: all-scroll
   flex: 1 1 auto
   
-  &.show-aggregations-none
-    .aggregated-text    
-      display: none
-    
-  &.show-aggregations-overlay
-    .aggregated-text    
-      .circle
-        fill: rgba(153, 51, 153, 0.2)
+  .aggregated-text
+    .circle.start
+      fill: rgba($primary-light, 0.5)
+    .circle.end
+      fill: rgba($primary-dark, 0.5)
+    .path
+      fill: rgba($secondary, 0.9)
+    .text
+      fill: rgba($tertiary, 1)
+    &.selected
       .path
-        fill: rgba(255, 255, 255, 0.3)
+        fill: rgba($primary-light, 0.9)
       .text
-        fill: rgba(0, 0, 0, 0)
-    .aggregated-text:hover
-      .circle 
-      .path
-        fill: rgba(255, 255, 255, 1)
-      .text
-        fill: rgba(0, 0, 0, 1)
-  
-  &.show-aggregations-full
-    .aggregated-text
-      .circle.start
-        fill: rgba($primary-light, 0.5)
-      .circle.end
-        fill: rgba($primary-dark, 0.5)
-      .path
-        fill: rgba($secondary, 0.9)
-      .text
-        fill: rgba($tertiary, 1)
-      &.selected
-        .path
-          fill: rgba($primary-light, 0.9)
-        .text
-          fill: rgba($secondary, 1)
+        fill: rgba($secondary, 1)
+        
+  .highlight-path
+    fill: none
+    stroke: rgba($primary-light, 0.8)
+    stroke-width: 10px
     
 .svg-image-v3-loading
   animation-name: loading-pulse
