Fix Firefox flex container issue

--- a/src/styles/components/transcription-viewer-v3.styl
+++ b/src/styles/components/transcription-viewer-v3.styl
@@ -6,6 +6,7 @@
   align-items: stretch
   position: relative
   background: $neutral-light
+  height: 100%  //Prevents inner content from stretching the size of this container in FF
   
   .control-panel
     flex: 0 0 auto
