--- a/src/styles/components/transcription-viewer-v3.styl
+++ b/src/styles/components/transcription-viewer-v3.styl
@@ -1,5 +1,4 @@
 .transcription-viewer-v3
-  background: $secondary
   flex: 1 1 auto
   display: flex
   flex-direction: row
@@ -89,12 +88,20 @@
     font-size: 0.8em
     margin: 1px
     
+    .helper-controls
+      background: $primary
+      border-bottom: 0.5em solid $primary-dark
+      margin-top: 0.2em
+      border-top-left-radius: 0.5em
+      border-top-right-radius: 0.5em
+    
     .list
       flex: 1 1 auto
       overflow: auto  //Allow users to scroll to see more aggregated content if window is too small - and it will be
+      padding: 0.5em 0 80vh 0
       
       .item
-        margin-top: 1em
+        margin-bottom: 1em
         background: $secondary
         color: $tertiary
         border-radius: 1em
@@ -109,7 +116,7 @@
             flex: 0 0 auto
             cursor: pointer
 
-          span
+          a
             flex: 1 1 auto
             color: $primary
             
@@ -117,14 +124,12 @@
               color: $primary-light
               cursor: pointer
 
-        ul.raw
+        .raw
           display: none
           font-size: 0.8em
-          margin: 0
-          padding: 0
-          list-style: none
 
-          li
+          a
+            display: block
             border-left: 0.5em solid $primary
             border-top-left-radius: 0.5em
             margin: 0.2em 0 0 0
@@ -141,8 +146,12 @@
           color: $secondary
           background: $primary-light
           
-          .aggregated span, .aggregated span:hover
+          .aggregated a, .aggregated a:hover
             color: $secondary
           
-          ul.raw
+          .raw
             display: block
+            
+            a, a:hover
+              color: $secondary
+
