--- a/src/styles/components/transcription-viewer-v3.styl
+++ b/src/styles/components/transcription-viewer-v3.styl
@@ -71,14 +71,8 @@
     
     &.vertical
       flex-direction: column
-      .data-subpanel
+      .svg-viewer-v3
         height: 45%  //Fixes FF bug where data-subpanel is way too huge in vertical.
-    
-    .data-subpanel
-      border: 1px solid $primary
-      margin: 3px
-      flex: 1 1 auto
-      display: flex
   
   .aggregations-panel
     flex: 0 0 auto
